# iati-cloud.dqa

./: .dockerignore  .env.example  .gitignore  DEVELOPMENT.md  DIAGRAMS.md  Dockerfile  LICENSE.MD  Makefile  README.md  VALIDATOR_RULES.md  docker-compose.yml  pyproject.toml
app/: cache.py  config.py  docs.py  main.py  models.py  solr_client.py  validator.py
data/: default_dates.json
tests/: __init__.py  conftest.py  test_api.py  test_cache.py  test_config.py  test_config_api.py  test_solr_client.py  test_validator.py
