[project]
name = "iati-dqa-api"
version = "0.1.0"
description = "IATI Data Quality API - Validates IATI data quality across programmes and projects"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "flask==3.1.3",
    "flask-cors>=4.0.0",
    "gunicorn>=21.0.0",
    "redis>=5.0.0",
    "pysolr>=3.9.0",
    "python-dateutil>=2.8.2",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "flasgger>=0.9.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "freezegun>=1.4.0",
    "black>=23.12.0",
    "flake8>=7.3.0",
    "flake8-isort>=7.0.0",
    "flake8-pyproject>=1.2.4",
    "isort>=7.0.0",
]

[tool.black]
line-length = 120
target-version = ['py311']

[tool.flake8]
max-line-length = 120

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --cov=app --cov-report=term-missing --cov-report=html"

[tool.setuptools.packages.find]
exclude = ["dev*", "data*", "logs*"]
